force-app/main/default/objects/GH_Area_de_Oportunidad__c/GH_Area_de_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Área de Oportunidad</label>
    <nameField>
        <label>Nombre de Área de Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Áreas de oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>