force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_fec_FechaCompInicio__c.field-meta.xml
<CustomField>
    <fullName>GH_fec_FechaCompInicio__c</fullName>
    <label>Fecha Compromiso de Inicio</label>
    <type>Date</type>
</CustomField>