force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_fec_FechaCompTermino__c.field-meta.xml
<CustomField>
    <fullName>GH_fec_FechaCompTermino__c</fullName>
    <description>Fecha de término del compromiso del área de oportunidad</description>
    <label>Fecha Compromiso de Término</label>
    <type>Date</type>
</CustomField>