force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_lkp_ClasificacionDeTema__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_ClasificacionDeTema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Categorías:
Admisión
Almacén
Aseguradoras</inlineHelpText>
    <label>Clasificación de tema</label>
    <referenceTo>GH_Categoria_Area_de_Oportunidad__c</referenceTo>
    <relationshipLabel>Áreas de oportunidad</relationshipLabel>
    <relationshipName>Areas_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>