force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_lkp_ContactoMedico__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_ContactoMedico__c</fullName>
    <label>Contacto Médico</label>
    <referenceTo>GH_Contacto_Medico__c</referenceTo>
    <relationshipLabel>Áreas de oportunidad</relationshipLabel>
    <relationshipName>Areas_de_oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>