force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_lkp_Medico__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Medico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para credencialización.</description>
    <label>Médico</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Áreas de oportunidad</relationshipLabel>
    <relationshipName>GH_lkp_AreaDeOportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>