force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_lkp_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>GH_Proyecto__c</referenceTo>
    <relationshipLabel>Áreas de oportunidad</relationshipLabel>
    <relationshipName>Areas_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>