force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_pkl_Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nivel HU</fullName>
            </value>
            <value>
                <fullName>Nivel Corporativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>