force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_pkl_Copresidencia__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Copresidencia__c</fullName>
    <label>Copresidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copresidente_Finanzas_Sergio_Uriel_Rodriguez_Rivero</fullName>
                <label>Copresidente Finanzas - Sergio Uriel Rodríguez Rivero</label>
            </value>
            <value>
                <fullName>Copresidente_Corebusiness_Bruno_de_Castro_Alves_Pinto</fullName>
                <label>Copresidente Corebusiness- Bruno  de Castro Alves Pinto</label>
            </value>
            <value>
                <fullName>Copresidente_Growth_Eduardo_Verboonen_Khoury</fullName>
                <label>Copresidente Growth - Eduardo Verboonen Khoury</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>