force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_pkl_Estado__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Estado__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sin escalar</fullName>
                <default>true</default>
                <label>Sin escalar</label>
            </value>
            <value>
                <fullName>Escalado con área responsable</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Solucionado</fullName>
            </value>
            <value>
                <fullName>No se Solucionará</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>