force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_pkl_NivelDeEscalamiento__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_NivelDeEscalamiento__c</fullName>
    <label>Nivel de escalamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel_Corporativo</fullName>
                <label>Nivel Corporativo</label>
            </value>
            <value>
                <fullName>Nivel_UH</fullName>
                <label>Nivel UH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>