force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_pkl_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Prioridad__c</fullName>
    <description>Prioridad del área de oportunidad</description>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>