force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_txa_ComentariosUH__c.field-meta.xml
<CustomField>
    <fullName>GH_txa_ComentariosUH__c</fullName>
    <label>Comentarios UH</label>
    <type>TextArea</type>
</CustomField>