force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_txa_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>GH_txa_Descripcion__c</fullName>
    <description>Descripción de área de oportunidad</description>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>