force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_txt_NombreRespSol__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_NombreRespSol__c</fullName>
    <description>Nombre del responsable de solución</description>
    <label>Nombre de Responsable de Solución</label>
    <length>150</length>
    <type>Text</type>
</CustomField>