force-app/main/default/objects/GH_Area_de_Oportunidad__c/fields/GH_txt_PuestoRespSol__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_PuestoRespSol__c</fullName>
    <description>Puesto del responsable de la solución</description>
    <label>Puesto de Responsable de Solución</label>
    <length>100</length>
    <type>Text</type>
</CustomField>