force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/Falta_Motivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Falta_Motivo</fullName>
    <active>true</active>
    <description>Para pasar a el estado &quot;No se Solucionará&quot; se necesita seleccionar un Motivo</description>
    <errorConditionFormula>AND(ISPICKVAL(GH_pkl_Estado__c,&quot;No se Solucionará&quot;),
					ISPICKVAL(GH_pkl_Motivo__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Ingrese un &quot;Motivo&quot;</errorMessage>
</ValidationRule>