force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaCambioEstadoAreaOpClasif.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaCambioEstadoAreaOpClasif</fullName>
    <active>true</active>
    <description>Se valida que la clasificación del tema sea ingresada para cambiar de estado</description>
    <errorConditionFormula>AND (
				!ISPICKVAL(GH_pkl_Estado__c, &quot;Sin escalar&quot;),
				ISBLANK(GH_lkp_ClasificacionDeTema__c)
)</errorConditionFormula>
    <errorDisplayField>GH_lkp_ClasificacionDeTema__c</errorDisplayField>
    <errorMessage>La clasificación del tema es obligatoria para cambiar de estado</errorMessage>
</ValidationRule>