force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaCambioEstadoAreaOpCopresiden.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaCambioEstadoAreaOpCopresiden</fullName>
    <active>true</active>
    <description>Se valida que la copresidencia sea ingresada para cambiar de estado</description>
    <errorConditionFormula>AND (
    !ISPICKVAL(GH_pkl_Estado__c, &quot;Sin escalar&quot;),
    ISPICKVAL(GH_pkl_Copresidencia__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>GH_pkl_Copresidencia__c</errorDisplayField>
    <errorMessage>La copresidencia es obligatoria para cambiar de estado</errorMessage>
</ValidationRule>