force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaCambioEstadoAreaOpNomResp.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaCambioEstadoAreaOpNomResp</fullName>
    <active>true</active>
    <description>Se valida que el nombre del responsable sea ingresado para cambiar de estado</description>
    <errorConditionFormula>AND (
    !ISPICKVAL(GH_pkl_Estado__c, &quot;Sin escalar&quot;),
    ISBLANK(GH_txt_NombreRespSol__c)
)</errorConditionFormula>
    <errorDisplayField>GH_txt_NombreRespSol__c</errorDisplayField>
    <errorMessage>El nombre del responsable de la solución es obligatorio para cambiar de estado</errorMessage>
</ValidationRule>