force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaCambioEstadoAreaOpSubDir.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaCambioEstadoAreaOpSubDir</fullName>
    <active>true</active>
    <description>Se valida que la Subdirección / Gerencia / Coordinación sea ingresada para cambiar de estado</description>
    <errorConditionFormula>AND (
    !ISPICKVAL(GH_pkl_Estado__c, &quot;Sin escalar&quot;),
    ISPICKVAL(GH_pkl_SubdireccionGerenciaCoordinacion__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>GH_pkl_SubdireccionGerenciaCoordinacion__c</errorDisplayField>
    <errorMessage>La Subdirección / Gerencia / Coordinación es obligatoria para cambiar de estado</errorMessage>
</ValidationRule>