force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaFechaInicioAreaOp.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaFechaInicioAreaOp</fullName>
    <active>true</active>
    <description>Se valida que la fecha de inicio de un área de oportunidad no sea menor al día actual</description>
    <errorConditionFormula>GH_fec_FechaCompInicio__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>GH_fec_FechaCompInicio__c</errorDisplayField>
    <errorMessage>La fecha de compromiso de inicio del área de oportunidad debe ser igual o mayor a la fecha actual</errorMessage>
</ValidationRule>