force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaFechaTerminoAreaOp.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaFechaTerminoAreaOp</fullName>
    <active>true</active>
    <description>Se valida que la fecha de compromiso de término no sea menor a la fecha de inicio</description>
    <errorConditionFormula>GH_fec_FechaCompTermino__c &lt; GH_fec_FechaCompInicio__c</errorConditionFormula>
    <errorDisplayField>GH_fec_FechaCompTermino__c</errorDisplayField>
    <errorMessage>La fecha de compromiso de término no puede ser menor a la fecha de inicio</errorMessage>
</ValidationRule>