force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_RV_ValidaMotivoEstatusNoSeSolucionara.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_RV_ValidaMotivoEstatusNoSeSolucionara</fullName>
    <active>true</active>
    <description>Se valida que el motivo sea ingresado cuando el estado es &quot;No se Solucionará&quot;</description>
    <errorConditionFormula>AND (
    ISPICKVAL(GH_pkl_Estado__c, &quot;No se Solucionará&quot;),
    ISPICKVAL(GH_pkl_Motivo__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>GH_pkl_Motivo__c</errorDisplayField>
    <errorMessage>El motivo es obligatorio cuando el estado es &quot;No se Solucionará&quot;</errorMessage>
</ValidationRule>