force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_ValidarFormatoComentariosUH.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_ValidarFormatoComentariosUH</fullName>
    <active>true</active>
    <description>Valida que las letras se proporcionen en MAYÚCULAS y sin acentos; así como, los caracteres válidos.</description>
    <errorConditionFormula>( NOT(ISBLANK(GH_txa_ComentariosUH__c)) &amp;&amp; 
  NOT( REGEX(GH_txa_ComentariosUH__c, &apos;^[A-ZÑÜ 0-9-,.;:_¡!¿?|&quot;#$%&amp;+*=&lt;&gt;\\@\\/\\[\\]\\(\\)\\{\\}\\s\\\&apos;]*$&apos;) )
)</errorConditionFormula>
    <errorDisplayField>GH_txa_ComentariosUH__c</errorDisplayField>
    <errorMessage>En Comentarios UH solo se permiten letras en MAYÚCULAS y sin acentos.</errorMessage>
</ValidationRule>