force-app/main/default/objects/GH_Area_de_Oportunidad__c/validationRules/GH_ValidarFormatoPuestoRespSol.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_ValidarFormatoPuestoRespSol</fullName>
    <active>true</active>
    <description>Valida que las letras se proporcionen en MAYÚCULAS y sin acentos; así como, los caracteres válidos.</description>
    <errorConditionFormula>( NOT(ISBLANK(GH_txt_PuestoRespSol__c)) &amp;&amp; 
  NOT( REGEX(GH_txt_PuestoRespSol__c, &apos;^[A-ZÑÜ 0-9-,.;:_¡!¿?|&quot;#$%&amp;+*=&lt;&gt;\\/\\[\\]\\(\\)\\{\\}\\\&apos;\\s]*$&apos;) )
)</errorConditionFormula>
    <errorDisplayField>GH_pkl_Clasificacion__c</errorDisplayField>
    <errorMessage>En Puesto de Responsable de Solución solo se permiten letras en MAYÚCULAS y sin acentos.</errorMessage>
</ValidationRule>