force-app/main/default/objects/GH_Area_de_Oportunidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GH_pkl_Clasificacion__c</columns>
    <columns>GH_lkp_ClasificacionDeTema__c</columns>
    <columns>GH_pkl_Copresidencia__c</columns>
    <columns>GH_pkl_Estado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>