force-app/main/default/objects/GH_Area_de_Oportunidad__c/listViews/GH_Seguimiento_Areas_de_Oportunidad.listView-meta.xml
<ListView>
    <fullName>GH_Seguimiento_Areas_de_Oportunidad</fullName>
    <columns>NAME</columns>
    <columns>GH_pkl_Clasificacion__c</columns>
    <columns>GH_lkp_ClasificacionDeTema__c</columns>
    <columns>GH_pkl_Copresidencia__c</columns>
    <columns>GH_pkl_Estado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Seguimiento de Áreas de Oportunidad</label>
    <sharedTo>
        <role>Vinculacion_Medica_Corp</role>
    </sharedTo>
</ListView>